apps/services/torrents/app/tunneled-connections-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tunneled-connections
spec:
  replicas: 1
  selector:
    matchLabels:
      app: torrents
  template:
    metadata:
      labels:
        app: torrents
        backup.velero.io/backup-volumes-excludes: "media-pvc"
        velero.io/exclude-from-backup: "true"
    spec:
      # only deploy on bigrig due to use of HostPath
      nodeSelector:
        kubernetes.io/hostname: bigrig
      containers:
        - name: gluetun
          image: qmcgaw/gluetun:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 51820
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
          volumeMounts:
            - name: wg-config
              mountPath: /gluetun/wireguard/

        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          ports:
            - containerPort: 9091
            - containerPort: 6881
          volumeMounts:
            - name: downloads
              mountPath: /downloads
            - name: qbittorrent-config
              mountPath: /config

      volumes:
        - name: downloads
          hostPath:
            path: /var/mnt/irma/media
          # persistentVolumeClaim:
          #   claimName: media-pvc
        - name: wg-config
          secret:
            secretName: wireguard-config
            items:
              - key: wg0.conf
                path: wg0.conf
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config
