apps/services/torrents/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  type: ClusterIP
  ports:
    - name: "9091"
      port: 9091
      targetPort: 9091
  selector:
    app: torrents
# service for prowlarr
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  type: NodePort
  ports:
    - name: "9696"
      port: 9696
      targetPort: 9696
  selector:
    app: torrents
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  type: LoadBalancer
  ports:
    - name: "8989"
      port: 8989
      targetPort: 8989
  selector:
    app: torrents
# pvcs commented out to persist between installations
---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
spec:
  type: ClusterIP
  ports:
    - name: "8191"
      port: 8191
      targetPort: 8191
  selector:
    app: torrents
