apps/services/torrents/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  annotations:
    gethomepage.dev/description: Download Torrents
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Torrents
    gethomepage.dev/icon: qbittorrent.png
    gethomepage.dev/name: qBittorrent
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  rules:
    - host: qbittorrent.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 9091
  tls:
    - hosts:
        - qbittorrent.internal
      secretName: homelab-tls-qbittorrent
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stremio
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Streaming Aggregator
    gethomepage.dev/group: Media
    gethomepage.dev/icon: stremio.png
    gethomepage.dev/name: Stremio
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  rules:
    - host: stremio.internal
      http:
        paths:
          - backend:
              service:
                name: stremio-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - stremio.internal
      secretName: homelab-tls
